# accel_calibration

./: README.md  acc cali.sln  acc cali.vcxproj  acc cali.vcxproj.filters
Debug/: vc140.idb
Debug/acc cali.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  acc cali.lastbuildstate
accer/: 4l.txt  CMakeCache.txt  CMakeLists.txt  Makefile  accer.cbp  cmake_install.cmake  main.cpp  test.txt  test.txt~  test_1.txt  test_2.txt  test_ios.txt~
build-accer-Desktop_Qt_5_7_0_GCC_64bit-Debug/: CMakeCache.txt  Makefile  accer  accer.cbp  cmake_install.cmake
build-accer-Desktop_Qt_5_7_0_GCC_64bit-Default/: CMakeCache.txt  Makefile  accer  accer.cbp  cmake_install.cmake  test.txt
